v2-website/versioned_docs/version-0.54/image.md
---
id: image
title: Image
original_id: image
---

A React component for displaying different types of images, including network images, static resources, temporary local images, and images from local disk, such as the camera roll.

This example shows fetching and displaying an image from local storage as well as one from network and even from data provided in the `'data:'` uri scheme.

&gt; Note that for network and data images, you will need to manually specify the dimensions of your image!

```SnackPlayer

import React, { Component } from 'react';
import { AppRegistry, View, Image } from 'react-native';

export default class DisplayAnImage extends Component {
  render() {
    return (
      <View>
        <Image
          style={{width: 50, height: 50}}
          source={require('@expo/snack-static/react-native-logo.png')}
        />
        <Image
          style={{width: 50, height: 50}}
          source={{uri: 'https://reactnative.dev/img/tiny_logo.png'}}
        />
        <Image
          style={{width: 66, height: 58}}
          source={{uri: 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADMAAAAzCAYAAAA6oTAqAAAAEXRFWHRTb2Z0d2FyZQBwbmdjcnVzaEB1SfMAAABQSURBVGje7dSxCQBACARB+2/ab8BEeQNhFi6WSYzYLYudDQYGBgYGBgYGBgYGBgYGBgZmcvDqYGBgmhivGQYGBgYGBgYGBgYGBgYGBgbmQw+P/eMrC5UTVAAAAABJRU5ErkJggg=='}}
        />
      </View>
    );
  }
}

// skip this line if using Create React Native App
AppRegistry.registerComponent('DisplayAnImage', () => DisplayAnImage);

```

You can also add `style` to an image:

```SnackPlayer

import React, { Component } from 'react';
import { AppRegistry, View, Image, StyleSheet } from 'react-native';

const styles = StyleSheet.create({
  stretch: {
    width: 50,
    height: 200
  }
});

export default class DisplayAnImageWithStyle extends Component {
  render() {
    return (
      <View>
        <Image
          style={styles.stretch}
          source={require('@expo/snack-static/react-native-logo.png')}
        />
      </View>
    );
  }
}

// skip these lines if using Create React Native App
AppRegistry.registerComponent(
  'DisplayAnImageWithStyle',
  () => DisplayAnImageWithStyle
);

```

### GIF and WebP support on Android

When building your own native code, GIF and WebP are not supported by default on Android.

You will need to add some optional modules in `android/app/build.gradle`, depending on the needs of your app.

```

dependencies {
  // If your app supports Android versions before Ice Cream Sandwich (API level 14)
  compile 'com.facebook.fresco:animated-base-support:1.3.0'

  // For animated GIF support
  compile 'com.facebook.fresco:animated-gif:1.3.0'

  // For WebP support, including animated WebP
  compile 'com.facebook.fresco:animated-webp:1.3.0'
  compile 'com.facebook.fresco:webpsupport:1.3.0'

  // For WebP support, without animations
  compile 'com.facebook.fresco:webpsupport:1.3.0'
}

```

Also, if you use GIF with ProGuard, you will need to add this rule in `proguard-rules.pro` :

```

-keep class com.facebook.imagepipeline.animated.factory.AnimatedFactoryImpl {
  public AnimatedFactoryImpl(com.facebook.imagepipeline.bitmaps.PlatformBitmapFactory, com.facebook.imagepipeline.core.ExecutorSupplier);
}

```

### Props

- [`style`](image.md#style)
- [`blurRadius`](image.md#blurradius)
- [`onLayout`](image.md#onlayout)
- [`onLoad`](image.md#onload)
- [`onLoadEnd`](image.md#onloadend)
- [`onLoadStart`](image.md#onloadstart)
- [`resizeMode`](image.md#resizemode)
- [`source`](image.md#source)
- [`loadingIndicatorSource`](image.md#loadingindicatorsource)
- [`onError`](image.md#onerror)
- [`testID`](image.md#testid)
- [`resizeMethod`](image.md#resizemethod)
- [`accessibilityLabel`](image.md#accessibilitylabel)
- [`accessible`](image.md#accessible)
- [`capInsets`](image.md#capinsets)
- [`defaultSource`](image.md#defaultsource)
- [`onPartialLoad`](image.md#onpartialload)
- [`onProgress`](image.md#onprogress)

### Methods

- [`getSize`](image.md#getsize)
- [`prefetch`](image.md#prefetch)
- [`abortPrefetch`](image.md#abortprefetch)
- [`queryCache`](image.md#querycache)
- [`resolveAssetSource`](image.md#resolveassetsource)

---

# Reference

## Props

### `style`

`ImageResizeMode` is an `Enum` for different image resizing modes, set via the `resizeMode` style property on `Image` components. The values are `contain`, `cover`, `stretch`, `center`, `repeat`.

| Type  | Required |
| ----- | -------- |
| style | No       |

- [Layout Props...](layout-props.md#props)

- [Shadow Props...](shadow-props.md#props)

- [Transforms...](transforms.md#props)

- **`borderTopRightRadius`**: number

- **`backfaceVisibility`**: enum('visible', 'hidden')

- **`borderBottomLeftRadius`**: number

- **`borderBottomRightRadius`**: number

- **`borderColor`**: [color](colors.md)

- **`borderRadius`**: number

- **`borderTopLeftRadius`**: number

- **`backgroundColor`**: [color](colors.md)

- **`borderWidth`**: number

- **`opacity`**: number

- **`overflow`**: enum('visible', 'hidden')

- **`resizeMode`**: Object.keys(ImageResizeMode)

- **`tintColor`**: [color](colors.md)

  Changes the color of all the non-transparent pixels to the tintColor.

- **`overlayColor`**: string (_Android_)

  When the image has rounded corners, specifying an overlayColor will cause the remaining space in the corners to be filled with a solid color. This is useful in cases which are not supported by the Android implementation of rounded corners:

  - Certain resize modes, such as 'contain'
  - Animated GIFs

  A typical way to use this prop is with images displayed on a solid background and setting the `overlayColor` to the same color as the background.

  For details of how this works under the hood, see http:

---

### ``

blurRadius: the blur radius of the blur filter added to the image

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

Invoked on mount and layout changes with ``.

| Type     | Required |
| -------- | -------- |
| function | No       |

---

### ``

Invoked when load completes successfully.

| Type     | Required |
| -------- | -------- |
| function | No       |

---

### ``

Invoked when load either succeeds or fails.

| Type     | Required |
| -------- | -------- |
| function | No       |

---

### ``

Invoked on load start.

e.g., ``

| Type     | Required |
| -------- | -------- |
| function | No       |

---

### ``

Determines how to resize the image when the frame doesn't match the raw image dimensions.

- ``: Scale the image uniformly (maintain the image's aspect ratio) so that both dimensions (width and height) of the image will be equal to or larger than the corresponding dimension of the view (minus padding).

- ``: Scale the image uniformly (maintain the image's aspect ratio) so that both dimensions (width and height) of the image will be equal to or less than the corresponding dimension of the view (minus padding).

- ``: Scale width and height independently, This may change the aspect ratio of the src.

- ``: Repeat the image to cover the frame of the view. The image will keep its size and aspect ratio. (iOS only)

- ``: Center the image in the view along both dimensions. If the image is larger than the view, scale it down uniformly so that it is contained in the view.

| Type                                                    | Required |
| ------------------------------------------------------- | -------- |
| enum('cover', 'contain', 'stretch', 'repeat', 'center') | No       |

---

### ``

The image source (either a remote URL or a local file resource).

This prop can also contain several remote URLs, specified together with their width and height and potentially with scale/other URI arguments. The native side will then choose the best `to display based on the measured size of the image container. A` property can be added to control how networked request interacts with the local cache.

The currently supported formats are `,`, `,`, `,` (Android only), `` (iOS only).

| Type                | Required |
| ------------------- | -------- |
| ImageSourcePropType | No       |

---

### ``

Similarly to ``, this property represents the resource used to render the loading indicator for the image, displayed until image is ready to be displayed, typically after when it got downloaded from network.

| Type                                  | Required |
| ------------------------------------- | -------- |
| array of ImageSourcePropTypes, number | No       |

&gt; Can accept a number as returned by ``

---

### ``

Invoked on load error with ``.

| Type     | Required |
| -------- | -------- |
| function | No       |

---

### ``

A unique identifier for this element to be used in UI Automation testing scripts.

| Type   | Required |
| ------ | -------- |
| string | No       |

---

### ``

The mechanism that should be used to resize the image when the image's dimensions differ from the image view's dimensions. Defaults to ``.

- `: Use heuristics to pick between` and ``.

- `: A software operation which changes the encoded image in memory before it gets decoded. This should be used instead of` when the image is much larger than the view.

- `: The image gets drawn downscaled or upscaled. Compared to`, `` is faster (usually hardware accelerated) and produces higher quality images. This should be used if the image is smaller than the view. It should also be used if the image is slightly bigger than the view.

More details about `and` can be found at .

| Type                            | Required | Platform |
| ------------------------------- | -------- | -------- |
| enum('auto', 'resize', 'scale') | No       | Android  |

---

### ``

The text that's read by the screen reader when the user interacts with the image.

| Type | Required | Platform |
| ---- | -------- | -------- |
| node | No       | iOS      |

---

### ``

When true, indicates the image is an accessibility element.

| Type | Required | Platform |
| ---- | -------- | -------- |
| bool | No       | iOS      |

---

### ``

When the image is resized, the corners of the size specified by `` will stay a fixed size, but the center content and borders of the image will be stretched. This is useful for creating resizable rounded buttons, shadows, and other resizable assets. More info in the [official Apple documentation](https://developer.apple.com/library/ios/documentation/UIKit/Reference/UIImage_Class/index.html#//apple_ref/occ/instm/UIImage/resizableImageWithCapInsets).

| Type                                                                       | Required | Platform |
| -------------------------------------------------------------------------- | -------- | -------- |
| object: {"{"}top: number, left: number, bottom: number, right: number{"}"} | No       | iOS      |

---

### ``

A static image to display while loading the image source.

| Type           | Required | Platform |
| -------------- | -------- | -------- |
| object, number | No       | iOS      |

If passing an object, the general shape is ``:

- `- a string representing the resource identifier for the image, which should be either a local file path or the name of a static image resource (which should be wrapped in the` function).
- `,` - can be specified if known at build time, in which case these will be used to set the default `` component dimensions.
- `` - used to indicate the scale factor of the image. Defaults to 1.0 if unspecified, meaning that one image pixel equates to one display point / DIP.

If passing a number:

- `- Opaque type returned by something like`.

---

### ``

Invoked when a partial load of the image is complete. The definition of what constitutes a "partial load" is loader specific though this is meant for progressive JPEG loads.

| Type     | Required | Platform |
| -------- | -------- | -------- |
| function | No       | iOS      |

---

### ``

Invoked on download progress with ``.

| Type     | Required | Platform |
| -------- | -------- | -------- |
| function | No       | iOS      |

## Methods

### ``

```jsx
```

Retrieve the width and height (in pixels) of an image prior to displaying it. This method can fail if the image cannot be found, or fails to download.

In order to retrieve the image dimensions, the image may first need to be loaded or downloaded, after which it will be cached. This means that in principle you could use this method to preload images, however it is not optimized for that purpose, and may in future be implemented in a way that does not fully load/download the image data. A proper, supported way to preload images will be provided as a separate API.

Does not work for static image resources.

**Parameters:**

| Name    | Type     | Required | Description                                                                                          |
| ------- | -------- | -------- | ---------------------------------------------------------------------------------------------------- |
| uri     | string   | Yes      | The location of the image.                                                                           |
| success | function | Yes      | The function that will be called if the image was successfully found and width and height retrieved. |
| failure | function | No       | The function that will be called if there was an error, such as failing toto retrieve the image.     |

---

### ``

```jsx
```

Prefetches a remote image for later use by downloading it to the disk cache

**Parameters:**

| Name | Type   | Required | Description                       |
| ---- | ------ | -------- | --------------------------------- |
| url  | string | Yes      | The remote location of the image. |

---

### ``

```jsx
```

Abort prefetch request. Android-only.

**Parameters:**

| Name      | Type   | Required | Description                  |
| --------- | ------ | -------- | ---------------------------- |
| requestId | number | Yes      | Id as returned by prefetch() |

---

### ``

```jsx
```

Perform cache interrogation. Returns a mapping from URL to cache status, such as "disk" or "memory". If a requested URL is not in the mapping, it means it's not in the cache.

**Parameters:**

| Name | Type  | Required | Description                                |
| ---- | ----- | -------- | ------------------------------------------ |
| urls | array | Yes      | List of image URLs to check the cache for. |

---

### ``

```jsx
```

Resolves an asset reference into an object which has the properties `,`, and ``.

**Parameters:**

| Name   | Type           | Required | Description                                                       |
| ------ | -------------- | -------- | ----------------------------------------------------------------- |
| source | number, object | Yes      | A number (opaque type returned by require('./foo.png')) or an ``. |

&gt; `is an object like`
